--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -15,46 +15,121 @@ form{
   background-blend-mode: darken;
 }
 
-.cell {
-  background-color: white;
-  display: inline-block;
+.container {
+  // Set the board's container to take up 100 percent of the
+  // viewport's height (the height of the browser)
+  height: 100vh;
 }
-.cell button {
-  height: 50px;
-  width: 50px;
-}
-.container{
-  height: 100%vh;
-  width: 100%vh;
-  min-height: 300px;
-}
-.box {
-  border-right: 1px solid black;
-  border-bottom: 1px solid black;
-  display: flex;
-  background-color: white;
-  background: transparent;
 
-&:nth-child(3n) {
-  border-right:0;
-}
-&:nth-last-child(-1n+3){
-  border-bottom: 0;
-}
- max-height: calc(100%/3);
- min-height: 50px;
- max-width: calc(100%/3);
-}
-.board{
+.board {
+  // Set the margins to auto. When the left and right
+  // margins are set to auto, they will be the same.
+  // Which ends up centering the board in between the margins.
+  margin: auto;
+
+  // Sets the maximum size of the board.
+  // 100vh means 100% of the viewport (browser's) height
+  // We subtract -75px so there is space at the bottom
+  // We use the same value for height and width so the board is a square.
   max-height: calc(100vh - 75px);
   max-width: calc(100vh - 75px);
-  min-height: 30px;
-  min-width: 30px;
-  background: url('https://static.vecteezy.com/system/resources/thumbnails/000/245/981/small_2x/mountain-sunset-landscape-first-person-view-vector.jpg');
+
+
+  // `url`           - is a link to our background image, stored in the public
+  //                   folder. Note: Any local images need to be stored in `public`
+  //                   to be accessible on your deployed site.
+  // `no-repeat`     - sets the `background-repeat` attribute to `no-repeat`,
+  //                   causing the image to only show up once, and not be
+  //                   repeated on the X or Y axis.
+  // `center center` - sets the `background-position` attribute, which center's
+  //                   the images along the X and Y axis respectively
+  background: url('https://static.vecteezy.com/system/resources/thumbnails/000/245/981/small_2x/mountain-sunset-landscape-first-person-view-vector.jpg') no-repeat center center;
+
+  // Scales the image as large as possible without stretching the image.
+  // The image will be cropped since its proportions are different from the `board` div.
   background-size: cover;
-  background-position: center;
-  margin: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
+
+.box {
+  // We will build our tic tac toe grid lines using each boxes border
+  // We set all bottom borders to be 1px, solid lines, and black.
+  // Note: We will remove the border for the bottom row later in this file.
+  border-bottom: 1px solid black;
+
+  // We set all right borders to be 1px, solid lines, and black.
+  // Note: We will remove the border for the right row later in this file.
+  border-right: 1px solid black;
+
+  // Make every box a flex container, so we can center the content (i.e. X or O)
+  // inside of it easily
+  display: flex;
+
+  // Center the content along the main-axis (left-to-right, because
+  // flex-direction defaults to `row`)
+  justify-content: center;
+
+  // Center the content along the cross-axis (top-to-bottom, since the
+  // cross axis is perpendicular to the main-axis)
+  align-items: center;
+
+
+  // Set the minimum height for each box to be a third of their parent's height
+  // (board's height)
+  min-height: calc(100% / 3);
+
+
+  // Each boxes initial background color.
+  // Note: We set this to transparent when a box has been clicked, so that we
+  //       can see the image behind it.
+  // background-color: white;
+
+  // Set the x's and o's to white
+  color: white;
+
+  // Adds a shadow to the X's and O's.
+  // The shadow is placed 2px to the right and 2px below the text, respectively.
+  // Set the shadow's color to black (rgb: 0, 0, 0) and to be
+  // 25% transparent (opacity)
+  text-shadow: 2px 2px rgba(0 , 0, 0, .25);
+
+  // Set the the X's and O's font-size to 15% of the
+  // viewport's height (browser's height)
+  font-size: 15vh;
+
+  // Prevent the user from selecting the X or O text.
+  user-select: none;
+
+  // Select the 3 right boxes, `nth-child` selects elements based on their
+  // position to their siblings.
+  // giving `nth-child` the value `3n` selects every third box (boxes 3, 6, and 9)
+  // Note: This is a sass nested selector, `&` refers to the current selector `.box`
+  &:nth-child(3n) {
+    // Remove their right border, since we only want lines in between boxes
+    // for our grid
+    border-right: 0;
+  }
+
+  // Select the 3 bottom boxes, `nth-last-child` selects elements based on their
+  // position, **counting from the end**.
+  // "-1n + 3" represents the last three elements among a group of siblings.
+
+  // Why? Lets see what `-1n + 3` evaluates to with different values of n
+  // when n is 0: (-1 * 0) + 3 = 3rd // selects the third to last .box
+  // when n is 1: (-1 * 1) + 3 = 2nd // selects the second to last .box
+  // when n is 2: (-1 * 2) + 3 = 1st // selects the last .box
+  &:nth-last-child(-1n + 3) {
+    // Remove their bottom border, since we only want lines in between boxes
+    // for our grid
+    border-bottom: 0;
+  }
+
+  // When you hover over a box
+  &:hover {
+    // Set the background color to a light blue
+    background-color: LightSkyBlue;
+  }
+}
+
+
+// Zach's background
+//background: url('https://static.vecteezy.com/system/resources/thumbnails/000/245/981/small_2x/mountain-sunset-landscape-first-person-view-vector.jpg') no-repeat center center;
