fixed sing up error message staying after sign up success after initial failure

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -5,6 +5,7 @@ body {
   background-color: rgba(106,173,181,255);
   color: brown;
   text-align: center;
+  width: 100%;
 }
 h1 {
   color: rgb(236, 44, 208);
