Added README and moved image to PUBLIC

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -5,7 +5,8 @@ body {
   background-color: rgba(106,173,181,255);
   color: brown;
   text-align: center;
-  width: 100%;
+  width: 90%;
+  max-height: 50% vh;
 }
 h1 {
   color: rgb(236, 44, 208);
@@ -59,6 +60,7 @@ p {
   font-family: Goldman;
   min-width: 620px;
 }
+
 button {
   background-color: rgba(87,160,164,255);
   border: 2px solid #rgb(236, 44, 208);
@@ -85,14 +87,14 @@ button {
   margin: auto;
   max-height: calc(75vh - 75px);
   max-width: calc(75vh - 75px);
-  background: url('https://static.vecteezy.com/system/resources/thumbnails/000/245/981/small_2x/mountain-sunset-landscape-first-person-view-vector.jpg') no-repeat center center;
+  background: url('/public/mountain-background') no-repeat center center;
   background-size: cover;
 }
 
 .box {
   color: rgb(236, 44, 208);
-  border-bottom: 1px solid black;
-  border-right: 1px solid black;
+  border-bottom: 2px solid rgba(106,173,181,255);
+  border-right: 2px solid rgba(106,173,181,255);
   display: flex;
   justify-content: center;
   align-items: center;
