Local hosting of image not working when deployed switched image back to URL

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -87,7 +87,7 @@ button {
   margin: auto;
   max-height: calc(75vh - 75px);
   max-width: calc(75vh - 75px);
-  background: url('/public/mountain-background') no-repeat center center;
+  background: url('https://static.vecteezy.com/system/resources/thumbnails/000/245/981/small_2x/mountain-sunset-landscape-first-person-view-vector.jpg') no-repeat center center;
   background-size: cover;
 }
 
